2001-08-01  Jeff Freedman  <jeff@amy.nerble.net>

	* gumps/Sign_gump.cc (Sign_gump): Scroll in SI.

	* objs/objs.cc: In SI, don't 'find_nearby()' teleport eggs.  Fixes
	wine cask bug.  (Though it may not be the right way; it's possible
	this is really a bug in the script, and the original SI just found
	the eggs in a different order than Exult.)

2001-07-31 Ryan Nunn <triforce@merlin.net.au>
	* exultmenu.cc, bggame.cc, sigame.cc : Namespace, need I say more?
	* fnames.h, shapes/*.*: Allow patch reading for vga files. Made
	  shapes.vga and all shape info files to read patches.
	* gamerend.cc, gamewin.h: Moved call to Gump_manager::update_gumps() to
	  Game_window::paint_dirty() from Game_window::paint(x,y,w,h).
	* gumps/Face_stats.cc: Made the Face Stat Bars a little safer by only
	  accessing the actors during calls to update and not when painting.
	* gumps/*.* : Some minor changes to gump shape painting.
	* otherfiles : Misc changes required due to referencecs to DataSources
	  being change to pointers in shapevga.cc/h.

2001-07-31  Max Horn <max@quendi.de>
	* files/utils.cc: worked arround bug in mkdir() on OS X/Darwin

2001-07-31  Tristan Tarrant <nadir@users.sourceforge.net>
	* game.h, bggame.cc, sigame.cc: add methods for discovering valid
	  path settings.
	* exultmenu.cc: show only valid game entries in menu or warning if 
	  none available.

2001-07-31  Jeff Freedman  <jeff@amy.nerble.net>

	* ucsched.cc,exult_constants.h,effects.cc:  Use c_std_delay for
	standard animation delay.
	* intrinsics.cc:  okay_to_flay=>on_barge.  Turtle in SI now works.

2001-07-30 Ryan Nunn <triforce@merlin.net.au>
	* cheat_screen.cc, gamewin.h, shapeid.cc, shapeid.h, gumps/Gump.cc: 
	  ShapeID now also can specify if a shape is translucent. This fixes
	  some problems where translucent objects weren't drawn as translucent.
	* gumps/Paperdoll_gump_info.cc: Fixed crash when using status bars and
	  Rowena was in your party and you don't have SI.
