@@ -1,3 +1,8 @@
+2001-08-02  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* objs/egg.cc (Egg_object): Rectangle was 1 tile too small.
+	* actors.cc:  Don't call 'unready' usecode if within usecode already.
+
 2001-08-01  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* gumps/Sign_gump.cc (Sign_gump): Scroll in SI.
